# flowdraft

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  in.txt  test-package.sh
.github/workflows/: release.yml
examples/: define_test.fd  org.fd  tree.txt
src/: lib.rs  main.rs  wasm.rs
src/ir/: build.rs  mod.rs  types.rs
src/layout/: flow.rs  freeform.rs  group.rs  mod.rs  tree.rs
src/parse/: ast.rs  expand.rs  mod.rs  transform.rs
src/render/: mod.rs  svg.rs
src/style/: defaults.rs  mod.rs  theme.rs
web/: README-SERVE.md  README.md  fix-paths.js  package.json  pnpm-lock.yaml  svelte.config.js
web/src/lib/: examples.ts  templates.ts  wasm.ts
web/src/lib/components/: Editor.svelte  ExportDialog.svelte  MenuBar.svelte  Preview.svelte  SplitPane.svelte  StatusBar.svelte  SyntaxReference.svelte  TabBar.svelte  TemplateGallery.svelte  WelcomeOverlay.svelte
web/src/lib/editor/: completions.ts  flowdraft-lang.ts
web/src/lib/stores/: files.ts  shortcuts.ts  theme.ts
web/src/lib/styles/: themes.ts
web/src/lib/utils/: export.ts
web/src/routes/: +layout.svelte  +page.svelte
